<resources>
    <string name="app_name">Scribble Notes App</string>
    <string name="name">Scribble</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="first_sentence">A fast and simple way to journal and</string>
    <string name="second_sentence">keep track of all your ideas in one place</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_msg">Welcome to Scribble Notes App</string>
    <string name="email">Enter your Email</string>
    <string name="password">Enter Your Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="first_half">Want to add notes? Sit back and</string>
    <string name="second_half">relax with just a click on the button below</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="something">Go ahead and type something.......</string>
    <string name="save">Save</string>
    <string name="date">August 7, 2022</string>
    <string name="find_your_notes">Find your notes</string>
    <string name="java_practice">Java Practice</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="username">email</string>
    <string name="sign_out">Sign Out</string>
</resources>